Fix scrollbar on Windows for bravery panel
Auditors: @aekeus

--- a/less/forms.less
+++ b/less/forms.less
@@ -66,7 +66,7 @@
     -webkit-user-select: none;
     cursor: default;
     color: #3B3B3B;
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 100%;
 
     .braveryPanelHeader {
